tdf#161035: The previous bookmarks can legitimately be not processed

The enumeration may be called for a partial paragraph selection, and
then the bookmarks prior to the selection are not processed.

Change-Id: Ib725ffb320ec5a81b39ce77f06392a82bd6d8ee0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167720
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167754
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>